Enhance structure of 'Backend'

--- a/Kapitel/00_Backend/Repositories/AliasRepository/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasRepository/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Klassenbeschreibung : AliasRepository}%$$$M
+\subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Händelt Zugriffe auf die zugrundeliegende Datenbank der vorhandenen Aliasse.
 Dazu gehören das Finden aller Aliasse zu einer bestimmten MapID, dem Löschen und Finden mittels das Namens sowie
@@ -9,4 +9,3 @@ dem Abspeichern neuer Aliasse.
     \item deleteByName(alias : String) 
     \item findByName(alias : String)
 \end{itemize}
-
