--- a/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Klassenbeschreibung : AliasSuggestionRepository}%$$$M
+\subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Händelt Zugriffe auf die zugrundeliegende Datenbank der vorhandenen Aliasvorschläge.
 Dazu gehören das Finden aller Vorschläge zu einer bestimmten MapID, das finden eines spezifischen Vorschlags mittels 
