--- a/Kapitel/00_Backend/Repositories/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Repositories/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Klassenbeschreibung : Repositories}%$$$M
+\subsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Wie erwähnt empfehlen wir die Datenhaltung mittels SQL Datenbanken, und den Zugriff auf diese mittels eines Repsitories,
 dass von der Libraryklasse "JpaRepository" erbt. Hierfür wird eine seperate Klasse mit den jeweiligen Konfigurationen benötigt,
