--- a/Kapitel/00_Backend/Repositories/BlacklistRepository/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Repositories/BlacklistRepository/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Klassenbeschreibung : BlacklistRepository}%$$$M
+\subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Händelt Zugriffe auf die zugrundeliegende Datenbank der vorhandenen Blacklisteinträge.
 Dafür müssen Einträge gelöscht und Entfernt werden können.
