--- a/Kapitel/00_Backend/Repositories/DeletedAliasRepository/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Repositories/DeletedAliasRepository/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Klassenbeschreibung : DeletedAliasRepository}%$$$M
+\subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Händelt Zugriffe auf die zugrundeliegende Datenbank der gelöschten Aliasse.
 Dafür müssen Einträge ab einer bestimmten Version abgefragt sowie Einträge hinzugefügt und gelöscht werden können.
