--- a/Kapitel/00_Backend/Repositories/UserRepository/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Repositories/UserRepository/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Klassenbeschreibung : UserRepository}%$$$M
+\subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Händelt Zugriffe auf die zugrundeliegende Datenbank der vorhanden User Einträge.
 Dafür müssen Einträge hinzugefügt und User mittels ihres Pseudonyms abgefragt werden können.
