--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasMutation/removeFromBlacklist_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasMutation/removeFromBlacklist_String_boolean/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{removeFromBlacklist(alias : String) : boolean}}%$$$M
+\paragraph*{\texttt{removeFromBlacklist(alias : String) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Entfernt einen globalen Alias aus der Blacklist.
 \paragraph*{Beschreibung}
