--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\paragraph{Klassenbeschreibung : AliasSuggestionMutation}%$$$M
+\paragraph*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Nimmt Http-Requests entgegen, welche in erster Linie Aliasvorschläge manipulieren wollen.
 \paragraph*{Enthaltene Methoden}
