--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/approveAliasSuggestion_String_int_boolean/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/approveAliasSuggestion_String_int_boolean/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{approveAliasSuggestion(aliasSuggestion : String, mapID : int) : boolean}}%$$$M
+\paragraph*{\texttt{approveAliasSuggestion(aliasSuggestion : String, mapID : int) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Akzeptiert den gewünschten Alias-Vorschlag.
 \paragraph*{Beschreibung}
