--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/blacklistAliasSuggestion_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/blacklistAliasSuggestion_String_boolean/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{blacklistAliasSuggestion(aliasSuggestion : String) : boolean}}%$$$M
+\paragraph*{\texttt{blacklistAliasSuggestion(aliasSuggestion : String) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Setzt den gewünschten Alias-Vorschlag auf die Blacklist.
 \paragraph*{Beschreibung}
