--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/evaluateAliasSuggestion_String,int,String,boolean_boolean/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/evaluateAliasSuggestion_String,int,String,boolean_boolean/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{evaluateAliasSuggestion(aliasSuggestion : String, mapID : int, user : String, evaluation : boolean) : boolean}}%$$$M
+\paragraph*{\texttt{evaluateAliasSuggestion(aliasSuggestion : String, mapID : int, user : String, evaluation : boolean) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Bewertet den gewünschten Alias-Vorschlag.
 \paragraph*{Beschreibung}
