--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/removeAliasSuggestion_String,int_boolean/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/removeAliasSuggestion_String,int_boolean/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{removeAliasSuggestion(aliasSuggestion : String, mapID : int) : boolean}}%$$$M
+\paragraph*{\texttt{removeAliasSuggestion(aliasSuggestion : String, mapID : int) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Entfernt den gewünschten Alias-Vorschlag.
 \paragraph*{Beschreibung}
