--- a/Kapitel/00_Backend/Resolvers/QueryResolver/AliasSuggestionQuery/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/AliasSuggestionQuery/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\paragraph{Klassenbeschreibung : AliasSuggestionQuery}%$$$M
+\subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Nimmt Http-Requests entgegen, welche Informationen über die hinterlegten AliasVorschläge sowie über die Blacklist abfragen wollen.
 \paragraph*{Enthaltene Methoden}
