--- a/Kapitel/00_Backend/Resolvers/QueryResolver/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\paragraph{Paketbeschreibung : QueryResolver}%$$$M
+\subsection*{Paketbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Nimmt Http-Requests entgegen, welche gespeicherten Daten abfragen wollen.
 \paragraph*{Enthaltene Klassen}
