--- a/Kapitel/00_Backend/Resolvers/QueryResolver/MapIDQuery/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/MapIDQuery/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\paragraph{Klassenbeschreibung : MapIDQuery}%$$$M
+\subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Nimmt Http-Requests entgegen, welche Kartenobjekte bzw. MapIDs abfragen wollen.
 \paragraph*{Enthaltene Methoden}
