--- a/Kapitel/00_Backend/Security/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Security/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Paketbeschreibung : Resolver}%$$$M
+\subsection{Paketbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Beinhaltet die Schnittstellen, die von außen durch Http-Requests über die GraphQL-Schnittstelle aufgerufen werden können.
 \paragraph*{Beschreibung}
@@ -9,9 +9,8 @@ führen und die richtige Rückgabe erzeugt wird.
 \begin{itemize}
     \item MutationResolver
     		\paragraph*{Beschreibung}
-            Bietet Schnittstellen zur Manipulation der gespeicherten Daten.
+    		Bietet Schnittstellen zur Manipulation der gespeicherten Daten.
     \item QueryResolver
     		\paragraph*{Beschreibung}
     		Bietet Schnittstelle zum Abfragen gespeicherter Daten.
 \end{itemize}
-
