--- a/Kapitel/00_Backend/Services/AliasSuggestionService/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Services/AliasSuggestionService/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Klassenbeschreibung : AliasSuggestionService}%$$$M
+\subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Zugriff auf zugrundeliegende Datenhaltung der Aliasvorschlägge.
 \paragraph*{Enthaltene Methoden}
