--- a/Kapitel/00_Backend/Services/BlacklistService/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Services/BlacklistService/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Klassenbeschreibung : BlacklistService}%$$$M
+\subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Zugriff auf zugrundeliegende Datenhaltung der Blacklisteinträge.
 \paragraph*{Enthaltene Methoden}
