--- a/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/main.tex
@@ -1,3 +1,3 @@
-\section{AliasSuggestionRepository}
+\subsection{AliasSuggestionRepository}
 
-\inprelmod{Beschreibung_AliasSuggestionRepository}
+\inprelmod{Beschreibung}
