--- a/Kapitel/00_Backend/Repositories/BlacklistRepository/main.tex
+++ b/Kapitel/00_Backend/Repositories/BlacklistRepository/main.tex
@@ -1,3 +1,3 @@
-\section{BlacklistRepository}
+\subsection{BlacklistRepository}
 
-\inprelmod{Beschreibung_BlacklistRepository}
+\inprelmod{Beschreibung}
