--- a/Kapitel/00_Backend/Repositories/DeletedAliasRepository/main.tex
+++ b/Kapitel/00_Backend/Repositories/DeletedAliasRepository/main.tex
@@ -1,3 +1,3 @@
-\section{DeletedAliasRepository}
+\subsection{DeletedAliasRepository}
 
-\inprelmod{Beschreibung_DeletedlAliasRepository}
+\inprelmod{Beschreibung}
