--- a/Kapitel/00_Backend/Repositories/MapIDRepository/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Repositories/MapIDRepository/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Klassenbeschreibung : MapIDRepository}%$$$M
+\subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Händelt Zugriffe auf die zugrundeliegende Datenbank der vorhanden MapID Einträge.
 Dafür müssen Einträge hinzugefügt und alle als auch spezifische Einträge(mittels Kartenobjektnamen oder MapID) 
