--- a/Kapitel/00_Backend/Repositories/UserRepository/main.tex
+++ b/Kapitel/00_Backend/Repositories/UserRepository/main.tex
@@ -1,3 +1,3 @@
-\section{UserRepository}
+\subsection{UserRepository}
 
-\inprelmod{Beschreibung_UserRepositoryRepository}
+\inprelmod{Beschreibung}
