--- a/Kapitel/00_Backend/Resolvers/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\paragraph{Paketbeschreibung : Resolver}%$$$M
+\subsection*{Paketbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Beinhaltet die Schnittstellen, die von außen durch Http-Requests über die GraphQL-Schnittstelle aufgerufen werden können.
 \paragraph*{Beschreibung}
