--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasMutation/removeAlias_String,int_boolean/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasMutation/removeAlias_String,int_boolean/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{removeAlias(alias : String, mapID : int) : boolean}}%$$$M
+\paragraph*{\texttt{removeAlias(alias : String, mapID : int) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Entfernt einen globalen Alias aus der Datenbank.
 \paragraph*{Beschreibung}
