--- a/Kapitel/00_Backend/Resolvers/MutationResolver/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\paragraph{Paketbeschreibung : MutationResolver}%$$$M
+\subsubsection*{Paketbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Nimmt Http-Requests entgegen, welche die gespeicherten Daten manipulieren wollen.
 Dafür empfehlen wir, dass alle Klassen dieses Paketes von der Libraryklasse "GraphQLMutationResolver" erben sollten.
