--- a/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\paragraph{Klassenbeschreibung : AliasQuery}%$$$M
+\subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Nimmt Http-Requests entgegen, welche Informationen über die hinterlegten Aliasse sowie über die Blacklist abfragen wollen.
 Dafür empfehlen wir, dass alle Klassen dieses Paketes von der Libraryklasse "GraphQLQueryResolver" erben sollten.
