--- a/Kapitel/00_Backend/Services/AliasService/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Services/AliasService/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\paragraph{Klassenbeschreibung : AliasService}%$$$M
+\subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Zugriff auf zugrundeliegende Datenhaltung der bestehenden Aliasse.
 \paragraph*{Enthaltene Methoden}
