Enhance structure of 'Backend'

--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasMutation/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasMutation/Beschreibung/main.tex
@@ -3,9 +3,9 @@
 Nimmt Http-Requests entgegen, welche in erster Linie Aliaseinträge manipulieren wollen.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
-    \item blacklistAlias(wordToForbid : String) : Boolean
-    \item removeAlias(alias : String)
-    \item removeFromBlacklist(forbiddenWord : String)
+    \item \texttt{blacklistAlias(toBlacklist : String) : boolean}
+    \item \texttt{removeAlias(alias : String)}
+    \item \texttt{removeFromBlacklist(blacklistedToRem : String)}
 \end{itemize}
 \paragraph*{Genutzte Klassen}
 \begin{itemize}
