--- a/Kapitel/00_Backend/Resolvers/QueryResolver/AliasSuggestionQuery/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/AliasSuggestionQuery/Beschreibung/main.tex
@@ -3,7 +3,7 @@
 Nimmt Http-Requests entgegen, welche Informationen über die hinterlegten AliasVorschläge sowie über die Blacklist abfragen wollen.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
-    \item getAliasSuggestions(minValToShowPos : int, minValToShowNeg : int) : List<AliasSuggestion> aliasSuggestions
+    \item \texttt{getAliasSuggestions(minValToShowPos : int, minValToShowNeg : int) : List<AliasSuggestion>} aliasSuggestions
 \end{itemize}
 \paragraph*{Genutzte Klassen}
 \begin{itemize}
