--- a/Kapitel/00_Backend/Resolvers/QueryResolver/MapIDQuery/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/MapIDQuery/Beschreibung/main.tex
@@ -3,9 +3,9 @@
 Nimmt Http-Requests entgegen, welche Kartenobjekte bzw. MapIDs abfragen wollen.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
-    \item getMapObject(mapID : int) : String
-    \item getMapID(mapObject : String) : int
-    \item getAll() : List<mapID : int>
+    \item \texttt{getMapObject(mapID : int) : String}
+    \item \texttt{getMapID(mapObject : String) : int}
+    \item \texttt{getAll() : List<mapID : int>}
 \end{itemize}
 \paragraph*{Genutzte Klassen}
 \begin{itemize}
