--- a/Kapitel/00_Backend/Services/AliasService/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Services/AliasService/Beschreibung/main.tex
@@ -3,10 +3,10 @@
 Zugriff auf zugrundeliegende Datenhaltung der bestehenden Aliasse.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
-    \item addAlias(alias : String, mapID : int) : Boolean
-    \item getAlias(mapID : int, userID : long) : List<Alias>
-    \item getAlias(mapID : int) : List<Alias>
-    \item getAlias(mapID : int, alias : String) : Alias
-    \item getAliasUpdates(version : int)
-    \item removeAlias(name : String) : Boolean
+    \item \texttt{addAlias(alias : String, mapID : int) : boolean}
+    \item \texttt{getAlias(mapID : int, userID : long) : List<Alias>}
+    \item \texttt{getAlias(mapID : int) : List<Alias>}
+    \item \texttt{getAlias(mapID : int, alias : String) : Alias}
+    \item \texttt{getAliasUpdates(version : int)}
+    \item \texttt{removeAlias(name : String) : boolean}
 \end{itemize}
