--- a/Kapitel/00_Backend/Services/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Services/Beschreibung/main.tex
@@ -7,17 +7,17 @@ eine SQL Datenbank zugreift, sodass wir diese Variante empfehlen. Dementsprechen
 zugrundeliegende Repositoryklasse um ihre Methoden umzusetzen. 
 \paragraph*{Enthaltene KLassen}
 \begin{itemize}
-    \item AliasService <<interface>>
+    \item AliasService \texttt{<<interface>>}
     \item AliasServiceImp
-    \item DeletedAliasService <<interface>>
+    \item DeletedAliasService \texttt{<<interface>>}
     \item DeletedAliasServiceImp
-    \item UserService <<interface>>
+    \item UserService \texttt{<<interface>>}
     \item UserServiceImp
-    \item AliasSuggestionService <<interface>>
+    \item AliasSuggestionService \texttt{<<interface>>}
     \item AliasSuggestionServiceImp
-    \item BlacklistService <<interface>>
+    \item BlacklistService \texttt{<<interface>>}
     \item BlacklistServiceImp
-    \item MapIDService <<interface>>
+    \item MapIDService \texttt{<<interface>>}
     \item MapIDServiceImp
 \end{itemize}
 
