--- a/Kapitel/00_Backend/Services/BlacklistService/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Services/BlacklistService/Beschreibung/main.tex
@@ -3,8 +3,8 @@
 Zugriff auf zugrundeliegende Datenhaltung der Blacklisteinträge.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
-    \item addToBlacklist(name : String)
-    \item removeFromBlackllist(name : String)
-    \item isBlacklisted(name : String)
-    \item getBlacklist() : List<alias : String>
+    \item \texttt{addToBlacklist(name : String)}
+    \item \texttt{removeFromBlackllist(name : String)}
+    \item \texttt{isBlacklisted(name : String)}
+    \item \texttt{getBlacklist() : List<alias : String>}
 \end{itemize}
