--- a/Kapitel/00_Backend/Services/DeletedAliasService/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Services/DeletedAliasService/Beschreibung/main.tex
@@ -5,7 +5,7 @@ denn es muss mitgeteilt werden, welche Aliasse in der Zwischenzeit gelöscht wor
 
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
-    \item +addDeletedAlias(name : String)
-    \item getDeletedAlias(version : int) : List<name : String, mapID : int>
-    \item removeDeletedAlias(alias : Strin, mapID : int)
+    \item \texttt{addDeletedAlias(name : String)}
+    \item \texttt{getDeletedAlias(version : int) : List<name : String, mapID : int>}
+    \item \texttt{removeDeletedAlias(alias : Strin, mapID : int)}
 \end{itemize}
