--- a/Kapitel/00_Backend/Services/MapIDService/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Services/MapIDService/Beschreibung/main.tex
@@ -5,9 +5,9 @@ mittels einer bestimmten der Name des jeweiligen Kartenobjekts bzw. andersrum er
 
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
-    \item +addMapID(ID : int, location : String)
-    \item removeMapID(ID : int)
-    \item getLocation(mapID : int) : String
-    \item getByName(name : String) : int
-    \item getAll() : List<mapID : int>
+    \item \texttt{addMapID(ID : int, location : String)}
+    \item \texttt{removeMapID(ID : int)}
+    \item \texttt{getLocation(mapID : int) : String}
+    \item \texttt{getByName(name : String) : int}
+    \item \texttt{getAll() : List<mapID : int>}
 \end{itemize}
