--- a/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/Beschreibung/main.tex
@@ -4,10 +4,10 @@ Nimmt Http-Requests entgegen, welche Informationen über die hinterlegten Aliass
 Dafür empfehlen wir, dass alle Klassen dieses Paketes von der Libraryklasse "GraphQLQueryResolver" erben sollten.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
-    \item getAlias(mapID : int) : List<Alias> aliases
-    \item getAlias(mapID : int, userID : String) : List<Alias> aliases
-    \item getUpdates(version : int) : (toAdd : List<Alias>, toDelete : List<Alias>, newVersion : int)
-    \item getBlacklist() : List<alias : String>
+    \item \texttt{getAlias(mapID : int) : List<Alias> aliases}
+    \item \texttt{getAlias(mapID : int, userID : String) : List<Alias> aliases}
+    \item \texttt{getUpdates(version : int) : (toAdd : List<Alias>, toDelete : List<Alias>, newVersion : int)}
+    \item \texttt{getBlacklist() : List<alias : String>}
 \end{itemize}
 \paragraph*{Genutzte Klassen}
 \begin{itemize}
