--- a/Kapitel/00_Backend/Services/AliasSuggestionService/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Services/AliasSuggestionService/Beschreibung/main.tex
@@ -3,8 +3,8 @@
 Zugriff auf zugrundeliegende Datenhaltung der Aliasvorschlägge.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
-    \item addAliasSuggestion(name :String, username : String, mapID : int)
-    \item removeAliasSuggestion(mapID : int, name : String)
-    \item voteForAlias(mapID : int, alias : String, vote : boolean, user : String)
-    \item getAliasSuggestions(posAmount : int, negAmount : int) : (List<(alias : String, mapID : int, rating : int)>, List<(alias : String, mapID : int, rating : int)>)
+    \item \texttt{addAliasSuggestion(name :String, username : String, mapID : int)}
+    \item \texttt{removeAliasSuggestion(mapID : int, name : String)}
+    \item \texttt{voteForAlias(mapID : int, alias : String, vote : boolean, user : String)}
+    \item \texttt{getAliasSuggestions(posAmount : int, negAmount : int) : (List<(alias : String, mapID : int, rating : int)>, List<(alias : String, mapID : int, rating : int)>)}
 \end{itemize}
