Fixed compilation errors

--- a/Kapitel/04_Admin_Panel/04_Klassen/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/main.tex
@@ -1,1 +1,8 @@
 \section{Klassen}
+
+\inprelmod{01_AuthManager}
+\inprelmod{02_Change}
+\inprelmod{03_ChangeAction}
+\inprelmod{04_Changes}
+\inprelmod{05_Backend}
+\inprelmod{06_Alias}
