Fix typo as requested

--- a/Kapitel/00_Backend/Resolvers/QueryResolver/MapIDQuery/getMapIDByName_String_int/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/MapIDQuery/getMapIDByName_String_int/main.tex
@@ -5,7 +5,7 @@ Gibt die ID des gewünschten, als Zeichenkette übergebenen Kartenobjekts zurüc
 Die Methode ist ausschließlich von Administratoren aufzurufen.
 Gibt die Anweisung an die Schnittstelle \texttt{MapIDService}, die ID des gewünschten, als Zeichenkette übergebenen Kartenobjekts zurückzugeben, und gibt diese wiederum zurück.
 Die Methode ermöglicht, dass ein Administrator durch Angabe der Zeichenkette des gewünschten Kartenobjektes die dazugehörige ID anfragen und zurückbekommen kann.
-Hierfür wird die Zeichenkette des  gewünschtem Kartenobjekts übergeben.
+Hierfür wird die Zeichenkette des gewünschten Kartenobjekts übergeben.
 \paragraph*{Parameter}
 \begin{itemize}
 	\item mapObject : String
