--- a/Kapitel/00_Backend/Repositories/AliasRepository/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasRepository/Beschreibung/main.tex
@@ -1,8 +1,8 @@
 \subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
-Händelt Zugriffe auf die zugrundeliegende Datenbank der vorhandenen Aliasse.
-Dazu gehören das Finden aller Aliasse zu einer bestimmten MapID, dem Löschen und Finden mittels das Namens sowie
-dem Abspeichern neuer Aliasse.
+Verwaltet Zugriffe auf die zugrundeliegende Datenbank der vorhandenen Aliasse.
+Dazu gehören das Finden aller Aliasse zu einer bestimmten MapID, das Löschen und Finden mittels das Namens sowie
+das Abspeichern neuer Aliasse.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
     \item findByMapID(mapID : int) : List<alias : String>
