--- a/Kapitel/00_Backend/Repositories/BlacklistRepository/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Repositories/BlacklistRepository/Beschreibung/main.tex
@@ -1,7 +1,7 @@
 \subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
-Händelt Zugriffe auf die zugrundeliegende Datenbank der vorhandenen Blacklisteinträge.
-Dafür müssen Einträge gelöscht und Entfernt werden können.
+Verwaltet Zugriffe auf die zugrundeliegende Datenbank der vorhandenen Blacklisteinträge.
+Dafür müssen Einträge gelöscht und hinzugefügt werden können.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
     \item deleteByName(alias : String)
