--- a/Kapitel/00_Backend/Repositories/MapIDRepository/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Repositories/MapIDRepository/Beschreibung/main.tex
@@ -1,7 +1,7 @@
 \subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
-Händelt Zugriffe auf die zugrundeliegende Datenbank der vorhanden MapID Einträge.
-Dafür müssen Einträge hinzugefügt und alle als auch spezifische Einträge(mittels Kartenobjektnamen oder MapID) 
+Verwaltet Zugriffe auf die zugrundeliegende Datenbank der vorhanden MapID Einträge.
+Dafür müssen Einträge hinzugefügt und sowohl alle vorhandenen als auch spezifische Einträge(mittels Kartenobjektnamen oder MapID) 
 abgefragt werden können.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
