--- a/Kapitel/00_Backend/Repositories/UserRepository/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Repositories/UserRepository/Beschreibung/main.tex
@@ -1,6 +1,6 @@
 \subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
-Händelt Zugriffe auf die zugrundeliegende Datenbank der vorhanden User Einträge.
+Verwaltet Zugriffe auf die zugrundeliegende Datenbank der vorhanden User Einträge.
 Dafür müssen Einträge hinzugefügt und User mittels ihres Pseudonyms abgefragt werden können.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
