--- a/Kapitel/00_Backend/Resolvers/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/Beschreibung/main.tex
@@ -2,8 +2,8 @@
 \paragraph*{Kurzbeschreibung}
 Beinhaltet die Schnittstellen, die von außen durch Http-Requests über die GraphQL-Schnittstelle aufgerufen werden können.
 \paragraph*{Beschreibung}
-Der Aufruf der Methoden der Klassen dieses Paket geschieht bei uns durch die in den Resourcen definierte GraphQL-Schnittstelle.
-Wird GraphQL nich genutzt, so muss auf andere Weise sichergestellt werden, dass die jeweiligen Http-Request zur Ausführung der richtigen Methoden
+Der Aufruf der Methoden der Klassen dieses Pakets geschieht bei uns durch die in den Resourcen definierte GraphQL-Schnittstelle.
+Wird GraphQL nicht genutzt, so muss auf andere Weise sichergestellt werden, dass die jeweiligen Http-Request zur Ausführung der richtigen Methoden
 führen und die richtige Rückgabe erzeugt wird.
 \paragraph*{Enthaltene Pakete}
 \begin{itemize}
