--- a/Kapitel/00_Backend/Resolvers/MutationResolver/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/Beschreibung/main.tex
@@ -6,8 +6,8 @@ Dafür empfehlen wir, dass alle Klassen dieses Paketes von der Libraryklasse "Gr
 \begin{itemize}
     \item AliasMutation
     		\paragraph*{Beschreibung}
-            Bietet Schnittstelle zum Entfernen, Blacklisten und von der Blacklist entfernen von Aliassen.
+            Bietet Schnittstelle zum Entfernen und Blacklisten von bestehende Aliassen sowie die Möglichkeit Einträge von der Blacklist zu entfernen.
     \item AliasSuggestionMutation
     		\paragraph*{Beschreibung}
-    		Bietet Schnittstelle zum Entfernen von Aliasvorschlägen sowie zum Erstellen, Bewerten und akzeptieren von Aliasvorschlägen.
+    		Bietet Schnittstelle zum Entfernen von Aliasvorschlägen sowie zum Erstellen, Bewerten und Akzeptieren von Aliasvorschlägen.
 \end{itemize}
