--- a/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/Beschreibung/main.tex
@@ -1,8 +1,8 @@
 \subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
-Händelt Zugriffe auf die zugrundeliegende Datenbank der vorhandenen Aliasvorschläge.
-Dazu gehören das Finden aller Vorschläge zu einer bestimmten MapID, das finden eines spezifischen Vorschlags mittels 
-seines Namens und der zugehörigen mapID sowie das Löschen und Speichern von Aliasvorschlägen.
+Verwaltet Zugriffe auf die zugrundeliegende Datenbank der vorhandenen Aliasvorschläge.
+Dazu gehören das Finden aller Vorschläge zu einer bestimmten MapID, das Finden eines spezifischen Vorschlags mittels 
+seines Namens und der zugehörigen MapID sowie das Löschen und Speichern von Aliasvorschlägen.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
     \item findByMapID(mapID : int) : List<alias : String>
