--- a/Kapitel/00_Backend/Resolvers/QueryResolver/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/Beschreibung/main.tex
@@ -1,14 +1,14 @@
 \subsection*{Paketbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
-Nimmt Http-Requests entgegen, welche gespeicherten Daten abfragen wollen.
+Nimmt Http-Requests entgegen, welche gespeicherte Daten abfragen wollen.
 \paragraph*{Enthaltene Klassen}
 \begin{itemize}
     \item AliasQuery
     		\paragraph*{Beschreibung}
-            Bietet Schnittstelle zum Abfragen von Aliassen, zum erhalten der Änderungen mittels einer Versionsnummer sowie zum Abrfagen der Blacklist.
+            Bietet Schnittstelle zum Abfragen von Aliassen, zum Erhalten der Änderungen mittels einer Versionsnummer sowie zum Abfragen der Blacklist.
     \item AliasSuggestionQuery
     		\paragraph*{Beschreibung}
-    		Bietet Schnittstelle zum Abfragen von Aliasvorschlägen, die mindestens so viele negative bzw. positive Bewertungen haben wie gefrodert.
+    		Bietet Schnittstelle zum Abfragen von Aliasvorschlägen, die mindestens so viele negative bzw. positive Bewertungen haben wie gefordert.
     \item MapIDQuery
     		\paragraph*{Beschreibung}
     		Bietet Schnittstelle zum Abfrage aller MapIDs mit den dazugehörigen Kartenobjekten sowie das Abfragen bestimmter Kartenobjekte mittels ihrer MapID sowie die Abfrage
