--- a/Kapitel/00_Backend/Services/UserService/main.tex
+++ b/Kapitel/00_Backend/Services/UserService/main.tex
@@ -1,5 +1,5 @@
 \subsection{UserService}
 
 \inprelmod{Beschreibung}
-\inprelmod{addUser_String_UserID}
+\inprelmod{addUser_String_boolean}
 \inprelmod{loadUserByToken_String_User}
