--- a/Kapitel/00_Backend/Services/AliasServiceImp/main.tex
+++ b/Kapitel/00_Backend/Services/AliasServiceImp/main.tex
@@ -3,6 +3,6 @@
 \inprelmod{Beschreibung}
 \inprelmod{addAlias_String,int_boolean}
 \inprelmod{removeAlias_String,int_boolean}
-\inprelmod{getAlias_int,UserID_ListAlias}
+\inprelmod{getAlias_int,String_ListAlias}
 \inprelmod{getAlias_int_ListAlias}
 \inprelmod{getAliasUpdates_int_ListAlias}
