--- a/Kapitel/00_Backend/Services/UserService/addUser_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/UserService/addUser_String_boolean/main.tex
@@ -1,8 +1,7 @@
-\paragraph{\texttt{addUser(accessToken : String) : UserID}}%$$$M
+\paragraph{\texttt{addUser(accessToken : String) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Nimmt einen Benutzer, der sich authentifiziert hat und noch nicht in die Datenbank aufgenommen wurde, in der Datenbank auf.
+Definiert das Aufnehmen eines Benutzers, der sich authentifiziert hat und noch nicht in die Datenbank aufgenommen wurde, in die Datenbank.
 \paragraph*{Beschreibung}
-Die Methode implementiert die gleichnamige Methode der Schnittstelle \texttt{UserService}.
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Resolvers} aufgerufen.
 Die Methode ermöglicht, dass ein Administrator einen Benutzer zur Datenbank aus allen Benutzern hinzufügen kann. Hierfür muss der Benutzer sich authentifiziert haben. 
@@ -15,4 +14,4 @@ Hierfür wird der Access-Token des gewünschten Benutzers übergeben.
     		Der Access-Token des gewünschten Benutzers, der sich bereits authentifiziert hat und den man in die Datenbank aufnehmen möchte.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Die ID des in die Datenbank aufgenommenen Benutzers.
+Wahr, wenn der gewünsche Benutzer erfolgreich in die Datenbank aufgenommen werden konnte oder wenn der Benutzer bereits in der Datenbank hinterlegt war, ansonsten falsch.
