--- a/Kapitel/00_Backend/Services/UserServiceImp/main.tex
+++ b/Kapitel/00_Backend/Services/UserServiceImp/main.tex
@@ -1,4 +1,4 @@
 \subsection{UserServiceImp}
 
-\inprelmod{addUser_String_UserID}
+\inprelmod{addUser_String_boolean}
 \inprelmod{loadUserByToken_String_User}
