Changed "Nutzer" to "Benutzer"

--- a/Kapitel/04_Admin_Panel/01_Layouts/01_Public_Layout/main.tex
+++ b/Kapitel/04_Admin_Panel/01_Layouts/01_Public_Layout/main.tex
@@ -20,7 +20,7 @@ Die Felder 7 bis 9 sind zusammengefasst. In diesen Feldern existieren Verlinkung
 Das dynamische Verhalten des Seiteninhalts wird durch die Seite definiert, die das Public-Layout verwendet.
 
 \subparagraph*{Anmeldung}
-Wird ein Anmeldungselement geklickt, so wird der Nutzer auf die Anmeldeseite des entsprechenden Dienstes weitergeleitet, um sich zu authentifizieren.
+Wird ein Anmeldungselement geklickt, so wird der Benutzer auf die Anmeldeseite des entsprechenden Dienstes weitergeleitet, um sich zu authentifizieren.
 Anschließend wird er wieder zur vorherigen Seite zurückgeleitet.
 
 \subparagraph*{Verlinkungen}
