--- a/Kapitel/04_Admin_Panel/01_Layouts/02_Admin_Layout/main.tex
+++ b/Kapitel/04_Admin_Panel/01_Layouts/02_Admin_Layout/main.tex
@@ -27,7 +27,7 @@ so klappt sich die Navigation auf ihre volle Größe aus. Die Navigation bleibt 
 Wird über ein Element der Navigation gehovert oder geklickt, so wird die Hintergrundfarbe dieses Elementes erhellt und die Schriftfarbe geändert.
 Wird nicht mehr über ein Element der Navigation gehovert oder wird auf ein anderes Element geklickt, so werden Hintergrundfarbe und Schriftfarbe zurückgesetzt.
 Wird auf ein Verlinkungselement geklickt, so wird auf die zugehörige Seite weitergeleitet.
-Wird auf das \dq Logout\dq - Element geklickt, so wird der Nutzer abgemeldet und auf die Startseite weitergeleitet.
+Wird auf das \dq Logout\dq - Element geklickt, so wird der Benutzer abgemeldet und auf die Startseite weitergeleitet.
 
 \subparagraph*{Seiteninhalt}
 Keines
@@ -35,4 +35,4 @@ Keines
 \paragraph*{Mobil}
 
 \paragraph*{Allgemeines dynamisches Verhalten}
-Ist der Nutzer auf einer Seite, die das Admin-Layout nutzt, nicht angemeldet, so wird er auf die Startseite weitergeleitet.
+Ist der Benutzer auf einer Seite, die das Admin-Layout nutzt, nicht angemeldet, so wird er auf die Startseite weitergeleitet.
