--- a/Kapitel/04_Admin_Panel/02_Aufbau/01_Startseite/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/01_Startseite/main.tex
@@ -18,8 +18,8 @@ Die Startseite hat die folgenden Aufgaben:
 \begin{itemize}
     \item Anzeigen des Webseitentitels
     \item Anzeigen der Beschreibung
-    \item Authentifizierungsstelle für Nutzer
-    \item Überprüfung des Berechtigungslevels für Nutzer
+    \item Authentifizierungsstelle für Benutzer
+    \item Überprüfung des Berechtigungslevels für Benutzer
     \item Automatische Weiterleitung von Administratoren zum Dashboard
     \item Anzeigen von Verlinkungen zu Projektressourcen
 \end{itemize}
