--- a/Kapitel/04_Admin_Panel/02_Aufbau/02_Dashboard/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/02_Dashboard/main.tex
@@ -1,6 +1,6 @@
 \subsection{Dashboard}
 
-Das Dashboard ist die erste Seite auf die der Nutzer weitergeleitet wird, sofern er sich als Administrator authentifiziert hat.
+Das Dashboard ist die erste Seite auf die der Benutzer weitergeleitet wird, sofern er sich als Administrator authentifiziert hat.
 
 \paragraph*{Layout}
 Das Dashboard benutzt das Admin-Layout.
