--- a/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/01_login/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/01_login/main.tex
@@ -1,10 +1,10 @@
 \paragraph{\texttt{+login() : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Ermöglicht einem Nutzer sich anzumelden.
+Ermöglicht einem Benutzer sich anzumelden.
 \paragraph*{Beschreibung}
-Ermöglicht einem Nutzer sich anzumelden.
+Ermöglicht einem Benutzer sich anzumelden.
 Hierfür wird ein OpenIDConnect-Provider (OIDC-Provider) verwendet, der zuvor durch die Methode \verb#AuthManager::configure# konfiguriert wird.
-Dazu wird der Nutzer auf die Login-Seite des OIDC-Providers geleitet und anschließend wieder zurück.
+Dazu wird der Benutzer auf die Login-Seite des OIDC-Providers geleitet und anschließend wieder zurück.
 Der erhaltene Access-Token wird anschließend gespeichert.
 Bei Erfolg wird wahr zurückgegeben, andernfalls wird Falsch zurückgegeben.
 \paragraph*{Parameter}
